[package]
name = "link_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
encrypt = { path = "./encrypt"}
serde_json = "1.0"
bytes = "1.9.0"
uuid = "1.12.1"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2.3"
aes-gcm = "0.10.3"
http-body-util = "0.1.2"
tower = "0.5.2"