[package]
name = "encrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
rand = "0.8.5"
uuid = { version = "1.0", features = ["v4"] }
p256 = { version = "0.13.2", features = ["ecdsa", "ecdh"] }
rand_core = { version = "0.6", features = ["std"] }
aes-gcm = "0.10.3"
dotenvy = "0.15.7"
elliptic-curve = "0.13" # Or the latest version
k256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
base64 = "0.22.1"
hkdf = "0.12"
sha2 = "0.10"
chrono = "0.4"
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"

