[package]
name = "handle_error"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres"] }
rust-argon2 = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
aes-gcm = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"